--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -12,6 +12,16 @@
 
     <!-- TODO #3 - Use the same list display from search.html -->
 
+    <div th:if="${jobs} and ${jobs.size()}">
+
+        <table th:each="job : ${jobs}" th:class="job-listing">
+            <tr th:each="key : ${job.keySet()}">
+                <td th:text="${key} + ':  ' + ${job.get(key)}"></td>
+            </tr>
+        </table>
+
+    </div>
+
 </div>
 
 </body>
