--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -40,9 +40,12 @@
 
        <div th:if="${jobs} and ${jobs.size()}">
 
+           <h2 th:text="${jobs.size()} + ' Result(s)'"></h2>
+
            <table th:each="job : ${jobs}" th:class="job-listing">
                <tr th:each="key : ${job.keySet()}">
-                       <td th:text="${key} + ':  ' + ${job.get(key)}"></td>
+                   <td th:text="${key}"></td>
+                   <td th:text="${job.get(key)}"></td>
                </tr>
            </table>
 
